templates/basic-git-server_template.yaml
---
# Source: basic-git-server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-basic-git-server
  labels:
    app.kubernetes.io/name: basic-git-server
    helm.sh/chart: basic-git-server-0.0.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: service
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: basic-git-server
    app.kubernetes.io/instance: release-name
---
# Source: basic-git-server/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-basic-git-server
  labels:
    app.kubernetes.io/name: basic-git-server
    helm.sh/chart: basic-git-server-0.0.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: basic-git-server
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: basic-git-server
        app.kubernetes.io/instance: release-name
    spec:
      containers:
        - name: basic-git-server
          image: "moikot/basic-git-server:0.0.2"
          imagePullPolicy: IfNotPresent
          args: ["-d", "/storage"]
          ports:
            - name: service
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: storage
              mountPath: /storage
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: release-name-basic-git-server
---
# Source: basic-git-server/templates/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: release-name-basic-git-server
  labels:
    app.kubernetes.io/name: basic-git-server
    helm.sh/chart: basic-git-server-0.0.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: git.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: release-name-basic-git-server
              servicePort: service
